--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -8304,6 +8304,7 @@ paths:
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/hash'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "List all groups"
@@ -8657,6 +8658,7 @@ paths:
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/hash'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "Get group files"
@@ -11311,6 +11313,7 @@ paths:
         - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/get_dirnames_path'
         - $ref: '#/components/parameters/filename'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "Successfully got all CDB lists and the files where they are defined"
@@ -13911,6 +13914,7 @@ paths:
         - $ref: '#/components/parameters/get_dirnames_path'
         - $ref: '#/components/parameters/xml_filename'
         - $ref: '#/components/parameters/statusRLDParam'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "Rule"
@@ -14691,6 +14695,7 @@ paths:
         - $ref: '#/components/parameters/xml_filename'
         - $ref: '#/components/parameters/get_dirnames_path'
         - $ref: '#/components/parameters/statusRLDParam'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "List of decoders files"
@@ -17264,6 +17269,7 @@ paths:
         - $ref: '#/components/parameters/select'
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/wait_for_complete'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "Information about user"
@@ -17529,6 +17535,7 @@ paths:
         - $ref: '#/components/parameters/select'
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/wait_for_complete'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "Return a list of roles"
@@ -18043,6 +18050,7 @@ paths:
         - $ref: '#/components/parameters/select'
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/wait_for_complete'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "Return a list of policies"
