--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -8657,6 +8657,7 @@ paths:
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/hash'
+        - $ref: '#/components/parameters/select'
       responses:
         '200':
           description: "Get group files"
@@ -11039,6 +11040,7 @@ paths:
         - $ref: '#/components/parameters/tag'
         - $ref: '#/components/parameters/log_level'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/select'
       responses:
         '200':
           description: "Wazuh node logs"
@@ -12675,6 +12677,7 @@ paths:
         - $ref: '#/components/parameters/tag'
         - $ref: '#/components/parameters/log_level'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/select'
       responses:
         '200':
           description: "Wazuh logs"
@@ -13911,6 +13914,7 @@ paths:
         - $ref: '#/components/parameters/get_dirnames_path'
         - $ref: '#/components/parameters/xml_filename'
         - $ref: '#/components/parameters/statusRLDParam'
+        - $ref: '#/components/parameters/select'
       responses:
         '200':
           description: "Rule"
@@ -14691,6 +14695,7 @@ paths:
         - $ref: '#/components/parameters/xml_filename'
         - $ref: '#/components/parameters/get_dirnames_path'
         - $ref: '#/components/parameters/statusRLDParam'
+        - $ref: '#/components/parameters/select'
       responses:
         '200':
           description: "List of decoders files"
